[tool.poetry]
name = "micone"
version = "0.5.0"
description = "The Microbial Co-occurrence Network Explorer"
authors = ["Dileep Kishore <dkishore@bu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.19.4"
pandas = "^1.2.0"
biom-format = "^2.1.10"
h5py = "^3.1.0"
ete3 = "^3.1.2"
statsmodels = "^0.12.1"
networkx = "^2.5"
toml = "^0.10.2"
schematics = "^2.1.0"
click = "^7.1.2"
halo = "^0.0.31"
loguru = "^0.5.3"
Jinja2 = "^2.11.2"
jinja2schema = "^0.1.4"
matplotlib = "^3.3.3"
simplejson = "^3.17.2"
jedi = "0.17.2"
parso = "0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
coverage = "^5.3.1"
Sphinx = "^3.4.2"
pytest = "^6.2.1"
ipython = "^7.19.0"
numpydoc = "^1.1.0"
pylint = "^2.6.0"
black = "^20.8b1"
mypy = "^0.790"
pre-commit = "^2.9.3"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
