[tool.poetry]
name = "micone"
version = "0.11.4"
description = "The Microbial Co-occurrence Network Explorer"
authors = ["Dileep Kishore <dkishore@bu.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/segrelab/MiCoNE"
documentation = "https://micone.readthedocs.io/en/latest"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.19.4"
pandas = "^1.2.0"
biom-format = "^2.1.10"
h5py = "^3.1.0"
ete3 = "^3.1.2"
statsmodels = "^0.12.1"
networkx = "^2.5"
toml = "^0.10.2"
schematics = "^2.1.0"
click = "^7.1.2"
halo = "^0.0.31"
loguru = "^0.5.3"
Jinja2 = "^2.11.2"
jinja2schema = "^0.1.4"
matplotlib = "^3.3.3"
simplejson = "^3.17.2"
Sphinx = {version = "^3.4.2", optional = true}
sphinx-rtd-theme = {version = "^0.5.1", optional = true}
black = "^21.12b0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest = "^6.2.1"
ipython = "^7.19.0"
pylint = "^2.6.0"
mypy = "^0.790"
pre-commit = "^2.9.3"
pytest-cov = "^2.11.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["micone"]

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
ignore_errors = true
omit = [
  "tests/*",
  "micone/pipelines/envs/*",
  "micone/pipelines/src/*",
]

[tool.poetry.scripts]
micone = "micone.cli:main"
